--- a/DevOps.Product.Common.Repository.Tests/DevOps.Product.Common.Repository.Tests.csproj
+++ b/DevOps.Product.Common.Repository.Tests/DevOps.Product.Common.Repository.Tests.csproj
@@ -7,9 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DevOps.Products.Common.Repository\DevOps.Products.Common.Repository.csproj" />
   </ItemGroup>
 
 </Project>
