--- a/DevOps.Products.Website/DevOps.Products.Website.csproj
+++ b/DevOps.Products.Website/DevOps.Products.Website.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
     <PackageReference Include="Polly" Version="7.1.1" />
+    <PackageReference Include="Toolbelt.Blazor.LoadingBar" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
