--- a/DevOps.Products.Website/Properties/launchSettings.json
+++ b/DevOps.Products.Website/Properties/launchSettings.json
@@ -18,10 +18,22 @@
     "DevOps.Products.Website": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "environmentVariables": {
+        "ASPNETCORE_URLS": "https://+:443;http://+:80",
+        "ASPNETCORE_HTTPS_PORT": "44382"
+      },
+      "httpPort": 65452,
+      "useSSL": true,
+      "sslPort": 44382
     }
   }
 }
