--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,34 @@
 version: '3.4'
 
 services:
-  devops.products.website:
+  website:
     image: ${DOCKER_REGISTRY-}devopsproductswebsite
     build:
       context: .
       dockerfile: DevOps.Products.Website\Dockerfile
+    environment:
+      - ReviewsURL=http://reviews.rest.api
+      - ProductsURL=http://products.rest.api
+    ports:
+      - "5100:80"
+    depends_on:
+      - reviews.rest.api
+      - products.rest.api
 
-  devops.products.reviews.rest.api:
+  reviews.rest.api:
     image: ${DOCKER_REGISTRY-}devopsproductsreviewsrestapi
     build:
       context: .
       dockerfile: DevOps.Products.Reviews.REST.API\Dockerfile
+    expose:
+      - "80"
+    ports:
+      - "5101:80"
 
-
-  devops.products.products.rest.api:
+  products.rest.api:
     image: ${DOCKER_REGISTRY-}devopsproductsproductsrestapi
     build:
       context: .
       dockerfile: DevOps.Products.Products.REST.API\Dockerfile
-
+    ports:
+      - "5102:80"
