--- a/DevOps.Products.Products.REST.API/DevOps.Products.Products.REST.API.csproj
+++ b/DevOps.Products.Products.REST.API/DevOps.Products.Products.REST.API.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <AssemblyName>DevOps.Products.Products.REST.API</AssemblyName>
     <RootNamespace>DevOps.Products.Products.REST.API</RootNamespace>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
