--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,6 +1,19 @@
 version: '3.4'
 
 services:
+  devops.products.products.rest.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "80"
+
+  devops.products.reviews.rest.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "80"
+
+
   devops.products.website:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
@@ -10,23 +23,5 @@ services:
       - "65461:80"
       - "44391:443"
     volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:C:\Users\ContainerUser\AppData\Roaming\Microsoft\UserSecrets:ro
-      - ${APPDATA}/ASP.NET/Https:C:\Users\ContainerUser\AppData\Roaming\ASP.NET\Https:ro
-  devops.products.reviews.rest.api:
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-    ports:
-      - "80"
-
-  devops.products.products.rest.api:
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-    ports:
-      - "80"
-
-networks:
-  default:
-    external:
-      name: nat
-
-
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
