--- a/DevOps.Products.Reviews.REST.API/Properties/launchSettings.json
+++ b/DevOps.Products.Reviews.REST.API/Properties/launchSettings.json
@@ -7,7 +7,7 @@
       "sslPort": 0
     },
     "iisExpress": {
-      "applicationUrl": "http://localhost:52790/api/reviews",
+      "applicationUrl": "http://localhost:52792/api/review-management",
       "sslPort": 0
     }
   },
