--- a/DevOps.Products.Reviews.REST.API/Properties/launchSettings.json
+++ b/DevOps.Products.Reviews.REST.API/Properties/launchSettings.json
@@ -7,25 +7,13 @@
       "sslPort": 0
     },
     "iisExpress": {
-      "applicationUrl": "http://localhost:52792/api/review-management",
+      "applicationUrl": "http://localhost:63645/",
       "sslPort": 0
     }
   },
-  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "DevOps.Products.Reviews.REST": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "http://localhost:5000"
+    "DevOps.Products.Reviews.REST.API": {
+      "commandName": "IISExpress"
     }
   }
 }
