--- a/DevOps.Products.Products.REST.API/Properties/launchSettings.json
+++ b/DevOps.Products.Products.REST.API/Properties/launchSettings.json
@@ -10,6 +10,7 @@
   "profiles": {
     "DevOps.Products.Products.REST.API": {
       "commandName": "IISExpress"
+      "ancmHostingModel": "OutOfProcess"
     }
   }
 }
