--- a/DevOps.Products.Products.REST.API/Properties/launchSettings.json
+++ b/DevOps.Products.Products.REST.API/Properties/launchSettings.json
@@ -9,7 +9,7 @@
   },
   "profiles": {
     "DevOps.Products.Products.REST.API": {
-      "commandName": "IISExpress"
+      "commandName": "IISExpress",
       "ancmHostingModel": "OutOfProcess"
     }
   }
