--- a/DevOps.Products.Website/Properties/launchSettings.json
+++ b/DevOps.Products.Website/Properties/launchSettings.json
@@ -2,30 +2,16 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
-    "iis": {
-      "applicationUrl": "http://localhost/DevOps.Products.Website",
-      "sslPort": 0
-    },
     "iisExpress": {
-      "applicationUrl": "http://localhost:52790/",
+      "applicationUrl": "http://localhost:63651/",
       "sslPort": 0
     }
   },
   "profiles": {
-    "IIS Express": {
+    "DevOps.Products.Website": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "DevOps.Products.Website": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "ancmHostingModel": "OutOfProcess"
     }
   }
 }
