Added environment variables

--- a/DevOps.Products.Products.REST.API/Properties/launchSettings.json
+++ b/DevOps.Products.Products.REST.API/Properties/launchSettings.json
@@ -10,7 +10,10 @@
   "profiles": {
     "DevOps.Products.Products.REST.API": {
       "commandName": "IISExpress",
-      "ancmHostingModel": "OutOfProcess"
+      "ancmHostingModel": "OutOfProcess",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
