Clean up and began to implement UI tests

--- a/DevOps.Products.Website.Tests/DevOps.Products.Website.Tests.csproj
+++ b/DevOps.Products.Website.Tests/DevOps.Products.Website.Tests.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DevOps.Products.Website\DevOps.Products.Website.csproj" />
+    <ProjectReference Include="..\Microsoft.AspNetCore.Components.Testing\Microsoft.AspNetCore.Components.Testing.csproj" />
   </ItemGroup>
 
 </Project>
